--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -57,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:text="Total World"
+                    android:text="World Case"
                     android:textColor="#000000"
                     android:textSize="30dp"
                     android:textStyle="bold" />
