--- a/app/src/main/res/layout/fragment_county_home.xml
+++ b/app/src/main/res/layout/fragment_county_home.xml
@@ -12,19 +12,40 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-smallcaps"
-                android:gravity="center"
-                android:text="Bangladesh"
-                android:textColor="#000"
-                android:textSize="25sp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+
+                >
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:layout_gravity="center"
+                    android:id="@+id/flagimage"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    />
+
+                <TextView
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="center"
+                    android:text="Bangladesh"
+                    android:textColor="#000"
+                    android:textSize="25sp" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -63,7 +84,6 @@
                 android:padding="15dp">
 
                 <androidx.cardview.widget.CardView
-
                     android:layout_width="0dp"
                     android:layout_height="140dp"
                     android:layout_weight="1"
