--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="transparent">#7F000000</color>
+    <color name="flag">#EE4061</color>
+    <color name="info">#1864E2</color>
 </resources>
